// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App render 1`] = `
<div>
  <div>
    Loading...
  </div>
</div>
`;

exports[`App render 2`] = `
<div>
  <div>
    Stocks :
    <ul>
      <li>
        0001.HK
        長和
      </li>
      <li>
        0002.HK
        中電控股
      </li>
    </ul>
  </div>
</div>
`;

exports[`AppComponent handles a loading state 1`] = `
<div>
  <div>
    Loading...
  </div>
</div>
`;

exports[`AppComponent handles an error state 1`] = `
<div>
  <div>
    Error :(
  </div>
</div>
`;
